RESOLVED FIXED78658
platformUserPreferredLanguages is leaking all of the language codes
https://bugs.webkit.org/show_bug.cgi?id=78658
Summary platformUserPreferredLanguages is leaking all of the language codes
Mark Rowe (bdash)
Reported 2012-02-14 18:24:35 PST
createHTTPStyleLanguageCode returns a newly-allocated NSString. The caller does nothing to release this string, causing a leak.
Attachments
Patch v1 (4.10 KB, patch)
2012-02-14 18:29 PST, Mark Rowe (bdash)
no flags
Mark Rowe (bdash)
Comment 1 2012-02-14 18:29:44 PST
Created attachment 127097 [details] Patch v1
Darin Adler
Comment 2 2012-02-14 18:33:09 PST
Comment on attachment 127097 [details] Patch v1 I probably would have made even more of the code use String, but this looks like a fine fix. r=me
WebKit Review Bot
Comment 3 2012-02-14 19:05:03 PST
Comment on attachment 127097 [details] Patch v1 Clearing flags on attachment: 127097 Committed r107771: <http://trac.webkit.org/changeset/107771>
WebKit Review Bot
Comment 4 2012-02-14 19:05:07 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.