<http://webkit.org/b/78658> platformUserPreferredLanguages is leaking all of the language codes

Reviewed by Darin Adler.

* platform/mac/Language.mm:
(WebCore::httpStyleLanguageCode): Switch to using RetainPtr's for temporaries to make the ownership
more explicit. Switch to returning a WTF::String so that the caller doesn't have to worry about
ownership at all. Change the name to reflect the lack of transfer of ownership.
(WebCore::platformUserPreferredLanguages):


Canonical link: https://commits.webkit.org/95614@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107771 268f45cc-cd09-0410-ab3c-d52691b4dbfc